--- a/frontend/viajes/package.json
+++ b/frontend/viajes/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
+    "@mui/joy": "^5.0.0-alpha.84",
     "@mui/material": "^5.13.5",
     "ag-grid-community": "^30.0.0",
     "ag-grid-react": "^30.0.0",
@@ -21,6 +22,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-router-dom": "^6.12.1"
   },
   "devDependencies": {
