--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js --exec babel-node",
-    "start":"node index.js"
+    "start":"node src/index.js"
   },
   "keywords": [],
   "author": "",
