--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js --exec babel-node",
-    "start":"node src/index.js"
+    "start": "nodemon src/index.js --exec babel-node" 
+    
   },
   "keywords": [],
   "author": "",
