--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js --exec babel-node" 
+    "start": "nodemon index.js --exec babel-node" 
     
   },
   "keywords": [],
