--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js --exec babel-node" 
+    "dev": "nodemon index.js --exec babel-node" ,
+    "start": "node index.js"
     
   },
   "keywords": [],
