--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js --exec babel-node" ,
-    "start": "node index.js"
+    "dev": "nodemon src/index.js --exec babel-node" ,
+    "start": "node src/index.js"
     
   },
   "keywords": [],
