--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js --exec babel-node" ,
-    "start": "nodemon backend/src/index.js"
-    
+    "start": "nodemon backend/src/index.js",
+    "type": "module"
   },
   "keywords": [],
   "author": "",
