--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js --exec babel-node" ,
-    "start": "nodemon backend/src/index.js",
-    "type": "module"
+    "dev": "nodemon src/index.js --exec babel-node"
   },
   "keywords": [],
   "author": "",
