--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
  
   "scripts": {
-    "start": "nodemon src/index.js --exec babel-node"
+    "start": "npx nodemon src/index.js --exec babel-node"
   },
   "keywords": [],
   "author": "",
