--- a/backend/package.json
+++ b/backend/package.json
@@ -1,28 +1,58 @@
 {
  
   "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
  
+  "version": "1.0.0",
+ 
+  "description": "",
+ 
+  "main": "index.mjs",
+ "type": "module",
   "scripts": {
-    "start": "npx nodemon src/index.js"
+ 
+   
+  "start": "npx nodemon src/index.mjs"
+ 
   },
+ 
   "keywords": [],
+ 
   "author": "",
+ 
   "license": "ISC",
+ 
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.1.4",
-    "express": "^4.18.2",
-    "morgan": "^1.10.0",
-    "mssql": "^9.1.1" 
+ 
+   
+  "cors": "^2.8.5",
+ 
+   
+  "dotenv": "^16.1.4",
+ 
+   
+  "express": "^4.18.2",
+ 
+   
+  "morgan": "^1.10.0",
+ 
+   
+  "mssql": "^9.1.1"
+ 
   },
+ 
   "devDependencies": {
-    "@babel/cli": "^7.22.5",
-    "@babel/node": "^7.22.5",
-    "@babel/preset-env": "^7.22.5",
-    "nodemon": "^2.0.22" 
-    
+ 
+   
+  "@babel/cli": "^7.22.5",
+ 
+   
+  "@babel/node": "^7.22.5",
+ 
+   
+  "@babel/preset-env": "^7.22.5",
+ 
+   
+  "nodemon": "^2.0.22"
+ 
   }
 }
